--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,8 @@ dependencies:
   firebase_remote_config: ^2.0.17
   shared_preferences: ^2.0.15
   webview_flutter: ^3.0.4
-  sim_info: ^0.1.3
-  device_info: ^2.0.3
+  flutter_sim_country_code: ^0.1.2
+  device_info_plus: ^5.0.1
 
 dev_dependencies:
   flutter_test:
