--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,11 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="onlinegames.ewbpzxv">
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="Мелбет"
         android:name="${applicationName}"
         android:icon="@mipmap/icon">
         <activity
             android:name=".MainActivity"
+            android:usesCleartextTraffic="true"
             android:exported="true"
             android:launchMode="singleTop"
             android:theme="@style/LaunchTheme"
